--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
@@ -74,8 +74,9 @@
                 </div>
 
                 <div class="form-group mt-4">
-                    <input type="submit" value="Save" class="btn btn-primary btn-lg" />
+                    <input type="submit" value="Save" class="btn btn-primary btn-lg" onclick="showMessage()" />
                 </div>
+
             </form>
         </div>
         @* <div class="mt-3">
@@ -85,7 +86,11 @@
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+
+    <script>
+        function showMessage() {
+            alert("Data saved successfully!");
+        }
+    </script>
 }
