--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
@@ -11,15 +11,57 @@
     <link rel="stylesheet" href="~/MedicineManagement.styles.css" asp-append-version="true" />
 </head>
 <body style="height: 100%; margin: 0;">
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow" style="background-color: #244b81; width:100%">
+            <div class="container-fluid">
+                <a class="navbar-brand font-weight-bold text-white ps-4" asp-area="" asp-controller="Home" asp-action="Index">MedicineApp</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
+                    <!-- Use justify-content-end to align items to the right -->
+                    <ul class="navbar-nav">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            // add a list item for authenticated user to display user name and logout link
+                            <li class="nav-item">
+                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Home" asp-action="Index">Hello @User.Identity.Name!</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Logout" asp-action="Logout"> Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Registration" asp-action="Index">Registration</a>
+                            </li>
+                        }
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+    </header>
     <div style="display: flex; flex-direction: row; height: 100%;">
         <!-- Sidebar -->
         <div style="width: 200px; background-color: #244b81; color: white; height: 100%; position: fixed; display: flex; flex-direction: column; align-items: center;">
             <ul style="list-style-type: none; padding: 0;">
                 <li style="margin-bottom: 100px; margin-top: 50px; text-align: center;">
-                    <a href="#" style="color: white; font-weight: bold; text-decoration: none; font-size: 24px;">Disease</a>
+                    <a href="/Disease/Create" style="color: white; font-weight: bold; text-decoration: none; font-size: 24px;">Disease</a>
                 </li>
                 <li style="margin-bottom: 50px; text-align: center;">
-                    <a href="#" style="color: white; font-weight: bold; text-decoration: none; font-size: 24px;">Medicine</a>
+                    <a href="/Medicine/Index" style="color: white; font-weight: bold; text-decoration: none; font-size: 24px;">Medicine</a>
                 </li>
             </ul>
         </div>
@@ -29,10 +71,15 @@
             @RenderBody()
         </div>
     </div>
-
+    <footer class="border-top footer text-muted" style="background-color: #244b81; color: white; position: fixed; bottom: 0; width: 100%; min-height:70px">
+        <div class="container mt-4">
+            &copy; 2021 - MedicineApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div>
+    </footer>
     @section Scripts {
         @await Html.PartialAsync("_ValidationScriptsPartial")
     }
     @RenderSection("Scripts", required: false)
+
 </body>
 </html>
