--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Index.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DataAccessLayer.Domain.Medicine
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/Disease.cshtml";
 }
 
 <style>
@@ -51,9 +51,9 @@
     }
 </style>
 
-<h1>Diseases</h1>
+<h1>Medicines</h1>
 
-<div class="row">
+<div class="row container">
     <div class="col-md-8">
         <div class="form-container">
             <form asp-action="Create" enctype="multipart/form-data">
