--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
@@ -9,20 +9,22 @@
     /* Your existing styles here */
 
     h1 {
-        margin-top: 20px;
-        margin-left: 30px; /* Add more left margin to the Disease heading */
+        margin-top: 70px; /* Add top margin to the Disease heading */
+        margin-bottom: 10px;
+        margin-left: 30px; /* Add left margin to the Disease heading */
+        font-size: 28px; /* Increase the font size of the heading */
     }
 
     .form-container {
         border: 1px solid #ccc;
-        padding: 30px; /* Add more padding around the form container */
+        padding: 30px; /* Add padding around the form container */
         border-radius: 5px;
-        background-color: #f9f9f9;
+        background-color: #F7CAC9;
         /* Decrease the height of the form container */
         min-height: 350px; /* Reduce the height of the form container */
         /* Decrease the width of the form container */
         /* max-width: 350px; */
-        margin-left: 30px; /* Add more left margin to the form container */
+        margin-left: 30px; /* Add left margin to the form container */
     }
 
     label {
@@ -40,12 +42,20 @@
 
     .form-group.mt-4 {
         margin-top: auto; /* Align the "Save" button towards the bottom */
+        padding-top: 5px;
+        padding-bottom: 5px;
+        
     }
 
     .btn-primary.btn-lg {
         padding: 10px 20px; /* Adjust the height of the "Save" button */
-        font-size: 16px; /* Adjust the font size of the "Save" button */
+        font-size: 18px; /* Adjust the font size of the "Save" button */
+        display: block; /* Center the button horizontally */
+        margin: 0; /* Remove the default margin for the button */
+        background-color: #244b81;
     }
+
+
 
     /* The rest of your styles */
 </style>
@@ -55,6 +65,7 @@
 <div class="row">
     <div class="col-md-8">
         <div class="form-container">
+
             <form asp-action="Create" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
