--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
@@ -9,12 +9,28 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MedicineManagement.styles.css" asp-append-version="true" />
+    <style>
+        ul li:hover {
+            background-color: cadetblue;
+        }
+
+        ul li a {
+            display: block;
+            color: white;
+            font-weight: bold;
+            text-decoration: none;
+            font-size: 20px;
+            padding: 10px 20px;
+        }
+    </style>
+ 
 </head>
 <body style="height: 100%; margin: 0;">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow" style="background-color: #244b81; width:100%">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow fixed-top" style="background-color: #244b81; width:100%">
+      @*  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow" style="background-color: #244b81; width:100%">*@
             <div class="container-fluid">
-                <a class="navbar-brand font-weight-bold text-white ps-4" asp-area="" asp-controller="Home" asp-action="Index">MedicineApp</a>
+                <a class="navbar-brand font-weight-bold text-white ps-4" style="font-size: 20px; font-weight: bold;" asp-area="" asp-controller="Home" asp-action="Index">MedicineApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,25 +42,25 @@
                         {
                             // add a list item for authenticated user to display user name and logout link
                             <li class="nav-item">
-                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Home" asp-action="Index">Hello @User.Identity.Name!</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Hello @User.Identity.Name!</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Logout" asp-action="Logout"> Logout</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Logout" asp-action="Logout"> Logout</a>
                             </li>
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light font-weight-bold" asp-area="" asp-controller="Registration" asp-action="Index">Registration</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Registration" asp-action="Index">Registration</a>
                             </li>
                         }
                     </ul>
@@ -55,25 +71,27 @@
     </header>
     <div style="display: flex; flex-direction: row; height: 100%;">
         <!-- Sidebar -->
-        <div style="width: 200px; background-color: #244b81; color: white; height: 100%; position: fixed; display: flex; flex-direction: column; align-items: center;">
+        <div style="width: 200px; background-color: cadetblue; color: white; height: 100%; position: fixed; display: flex; flex-direction: column; align-items: center;">
             <ul style="list-style-type: none; padding: 0;">
-                <li style="margin-bottom: 100px; margin-top: 50px; text-align: center;">
-                    <a href="/Disease/Create" style="color: white; font-weight: bold; text-decoration: none; font-size: 24px;">Disease</a>
+                <li style="margin-bottom: 100px; margin-top: 90px; text-align: center;">
+                    <a href="/Disease/Create">Disease</a>
                 </li>
-                <li style="margin-bottom: 50px; text-align: center;">
-                    <a href="/Medicine/Index" style="color: white; font-weight: bold; text-decoration: none; font-size: 24px;">Medicine</a>
+                <li style="margin-bottom: 70px; text-align: center;">
+                    <a href="/Medicine/Index">Medicine</a>
                 </li>
             </ul>
+
         </div>
 
+
         <!-- Main Content -->
-        <div style="flex: 1; margin-left: 250px;">
+        <div style="flex: 1; margin-left: 200px;">
             @RenderBody()
         </div>
     </div>
     <footer class="border-top footer text-muted" style="background-color: #244b81; color: white; position: fixed; bottom: 0; width: 100%; min-height:70px">
         <div class="container mt-4">
-            &copy; 2023 - MedicineApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - MedicineApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     @section Scripts {
