--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
@@ -62,7 +62,7 @@
 
 <h1>Diseases</h1>
 
-<div class="row">
+<div class="row container">
     <div class="col-md-8">
         <div class="form-container">
 
