--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Home.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Home.cshtml
@@ -1,18 +1,20 @@
 ﻿@model IEnumerable<MedicineManagement.ViewModels.DiseaseViewModel>
 @{
-    ViewBag.Title = "Diseases Management";
+    ViewData["Title"] = "Admin Home";
+    Layout = "~/Views/Shared/Disease.cshtml";
 }
 
-<div class="row container d-flex align-items-center justify-content-center">
 
-    <h1 class="text-left" style="margin-left:20px">Diseases Management</h1>
+<div class="row container d-flex align-items-center justify-content-center mt-5 pt-4">
+
+    <h1 class="text-left" style="margin-left:50px">Diseases Management</h1>
     @foreach (var disease in Model)
     {
         <div class="col-md-3 rounded">
 
 
 
-            <div class="card mt-4 rounded" style="margin-left:20px; width:80%">
+            <div class="card mt-4 rounded" style="margin-left:30px; margin-right:20px;  width:80%">
                 <img src="@disease.ImagePath" class="card-img-top" alt="disease image">
                 <div class="card-body">
                     <h5 class="card-title">@disease.DiseaseCategory</h5>
