--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Index.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Medicine/Index.cshtml
@@ -89,7 +89,7 @@
                     </select>
                     <span asp-validation-for="disease_category" class="text-danger"></span>
                 </div>
-
+                
                 <div class="form-group">
                     <label asp-for="ImageFile" class="control-label"></label>
                     <!-- Use the ImageFile property for file upload -->
@@ -109,11 +109,6 @@
                     <span asp-validation-for="brand_name" class="text-danger"></span>
                 </div>
 
-                <div class="form-group">
-                    <label asp-for="cost" class="control-label"></label>
-                    <input asp-for="cost" class="form-control" />
-                    <span asp-validation-for="cost" class="text-danger"></span>
-                </div>
 
                 <div class="form-group">
                     <label asp-for="mfd" class="control-label"></label>
@@ -133,8 +128,14 @@
                     <span asp-validation-for="weight" class="text-danger"></span>
                 </div>
 
+                <div class="form-group">
+                    <label asp-for="cost" class="control-label"></label>
+                    <input asp-for="cost" class="form-control" />
+                    <span asp-validation-for="cost" class="text-danger"></span>
+                </div>
+
                 <!-- The submit button is positioned inside the form container at the bottom left -->
-                <input type="submit" value="Save" class="btn btn-primary btn-lg" />
+                <input type="submit" value="Save" class="btn btn-primary btn-lg" onclick="showMessage()" />
 
             </form>
         </div>
@@ -144,5 +145,10 @@
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        <script>
+            function showMessage() {
+                alert("Data Inserted!");
+            }
+        </script>
     }
 }
