--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
@@ -23,14 +23,14 @@
             padding: 10px 20px;
         }
     </style>
- 
+
 </head>
 <body style="height: 100%; margin: 0;">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow fixed-top" style="background-color: #244b81; width:100%">
-      @*  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow" style="background-color: #244b81; width:100%">*@
+            @*  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow" style="background-color: #244b81; width:100%">*@
             <div class="container-fluid">
-                <a class="navbar-brand font-weight-bold text-white ps-4" style="font-size: 20px; font-weight: bold;" asp-area="" asp-controller="Home" asp-action="Index">MedicineApp</a>
+                <a class="navbar-brand font-weight-bold text-white ps-4" style="font-size: 20px; font-weight: bold;" asp-area="" asp-controller="Home" asp-action="Index">MedicineRetail</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -89,11 +89,14 @@
             @RenderBody()
         </div>
     </div>
-    <footer class="border-top footer text-muted" style="background-color: #244b81; color: white; position: fixed; bottom: 0; width: 100%; min-height:70px">
-        <div class="container mt-4">
-            &copy; 2023 - MedicineApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+
+    <footer class="border-top footer text-muted" style="background-color: #244b81; color: white; position: fixed; bottom: 0; width: 100%; min-height: 70px;">
+        <div class="container mb-3">
+            &copy; 2023 MedicineRetail Terms & Privacy
         </div>
     </footer>
+
+
     @section Scripts {
         @await Html.PartialAsync("_ValidationScriptsPartial")
     }
