--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Login/Index.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Login/Index.cshtml
@@ -12,19 +12,24 @@
 
 
         form {
-            border: 3px solid #f1f1f1;
             width: 60%;
             margin: auto;
-            margin-top: 5%;
+            margin-top: 2%;
+            /*background-color: #F7CAC9;*/
+            border: 3px solid #f1f1f1;
+            border-color: #244b81;
         }
+
 
         input[type=text], input[type=password] {
             width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
+            padding: 8px 20px; /* Adjust the padding values */
+            margin: 4px 0; /* Adjust the margin values */
             display: inline-block;
-            border: 1px solid #ccc;
+            /*border: 1px solid #ccc;*/
             box-sizing: border-box;
+            border: 1px solid #f1f1f1;
+            border-color: black;
         }
 
         button {
@@ -67,7 +72,7 @@
             <input type="text" asp-for="Email" placeholder="Enter Email">
             <div class="msg">
                 <span class="err" asp-validation-for="Email"></span>
-            </div>
+            </div><br />
 
             <label asp-for="Password"><b>Password</b></label>
             <input type="password" asp-for="Password" placeholder="Enter Password">
