--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Registration/Index.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Registration/Index.cshtml
@@ -1,71 +1,84 @@
 ﻿@model DataAccessLayer.Domain.Registration
 
-<h2>Registration</h2>
+<h2 class="text-center">Registration</h2>
 
 <link href="/css/bootstrap.min.css" rel="stylesheet" />
 @Html.ValidationSummary()
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 center-block">
 
-            <form asp-action="Index" method="post">
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6" style="margin-bottom: 8px;">
+
+            <form asp-action="Index" method="post" style="border: 3px solid #f1f1f1;
+                  border-color: #244b81; padding: 18px 10px" ;>
                 <div class="form-group">
-                    <label>FirstName</label>
+                    <label><strong>FirstName</strong></label>
                     <input type="text" class="form-control" asp-for="FirstName" />
                     <span class="text-danger" asp-validation-for="FirstName"></span>
                 </div>
 
                 <div class="form-group">
-                    <label>LastName</label>
+                    <label><strong>LastName</strong></label>
                     <input type="text" class="form-control" asp-for="LastName" />
                     <span class="text-danger" asp-validation-for="LastName"></span>
                 </div>
 
                 <div class="form-group">
-                    <label>Email</label>
+                    <label><strong>Email</strong></label>
                     <input type="text" class="form-control" asp-for="Email" />
                     <span class="text-danger" asp-validation-for="Email"></span>
                 </div>
 
                 <div class="form-group">
-                    <label>Contact</label>
+                    <label><strong>Contact</strong></label>
                     <input type="text" class="form-control" asp-for="Contact" />
                     <span class="text-danger" asp-validation-for="Contact"></span>
                 </div>
 
                 <div class="form-group">
-                    <label>Password (eg. John@123)</label>
+                    <label><strong>Password (eg. John@123)</strong></label>
                     <input type="password" class="form-control" asp-for="Password" />
                     <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
 
                 <div class="form-group">
-                    <label>Password confirm</label>
+                    <label><strong>Password confirm</strong></label>
                     <input type="password" class="form-control" asp-for="ConfirmPassword" />
                     <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
                 </div>
 
-               @* <div class="form-group">
-                    <label>
-                        @Html.CheckBoxFor(m => m.IsAdmin)
-                        Admin
-                    </label>
-                </div>*@
-
-                <div class="form-group" style="margin-top: 20px;">
-                    <button type="submit" style="background-color: #244b81; color: white"; onclick="showMessage()">Register</button>
+                <div class="form-group" style="margin-top: 8px;">
+                    <button type="submit" style="background-color: #244b81; color: white" height:40px"; onclick="showMessage()">Register</button><br />
                 </div>
 
             </form>
         </div>
     </div>
 </div>
+
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
 
     <script>
         function showMessage() {
-            alert("Registration Successfull!");
+            alert("Registration Successful!");
         }
     </script>
 }
+
+<style>
+    label strong {
+        font-weight: bold;
+    }
+
+    input[type=text], input[type=password] {
+        width: 100%;
+        padding: 5px 20px;
+        margin: 4px 0;
+        display: inline-block;
+        /*border: 1px solid #ccc;*/
+        box-sizing: border-box;
+        border: 1px solid #f1f1f1;
+        border-color: black;
+    }
+</style>
