--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/_Layout.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #244b81;">
             <div class="container-fluid">
-                <a class="navbar-brand font-weight-bold text-white" style="font-size: 20px; font-weight: bold;" asp-area="" asp-controller="Home" asp-action="Index">MedicineApp</a>
+                <a class="navbar-brand font-weight-bold text-white" style="font-size: 20px; font-weight: bold;" asp-area="" asp-controller="Home" asp-action="Index">MedicineRetail</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -71,11 +71,13 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            MedicineApp
+    <footer class="border-top footer text-muted" style="background-color: #244b81; color: white; position: fixed; bottom: 0; width: 100%;">
+        <div class="container mb-3">
+            &copy; 2023 MedicineRetail Terms & Privacy
         </div>
     </footer>
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
