Modified View classes

--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Disease/Create.cshtml
@@ -101,10 +101,16 @@
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
-
     <script>
         function showMessage() {
-            alert("Data saved successfully!");
+            var diseaseCategory = document.getElementById("DiseaseCategory");
+            var imageFile = document.getElementById("ImageFile");
+
+            if (!diseaseCategory.value || !imageFile.value) {
+                alert("Please enter values in all the required fields.");
+            } else {
+                alert("Data saved successfully!");
+            }
         }
     </script>
 }
