--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Registration/Index.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Registration/Index.cshtml
@@ -1,56 +1,59 @@
 ﻿@model DataAccessLayer.Domain.Registration
 
 <h2 class="text-center">Registration</h2>
-
-<link href="/css/bootstrap.min.css" rel="stylesheet" />
+@*
+<link href="/css/bootstrap.min.css" rel="stylesheet" />*@
 @Html.ValidationSummary()
 
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-6" style="margin-bottom: 8px;">
+        <div class="col-md-8" style="margin-bottom: 8px;">
+            <form asp-action="Index" method="post" style="border: 3px solid #f1f1f1; border-color: #244b81; padding: 18px 10px;">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label><strong>First Name</strong></label>
+                            <input type="text" class="form-control" asp-for="FirstName" />
+                            <span class="text-danger" asp-validation-for="FirstName"></span>
+                        </div>
 
-            <form asp-action="Index" method="post" style="border: 3px solid #f1f1f1;
-                  border-color: #244b81; padding: 18px 10px" ;>
-                <div class="form-group">
-                    <label><strong>FirstName</strong></label>
-                    <input type="text" class="form-control" asp-for="FirstName" />
-                    <span class="text-danger" asp-validation-for="FirstName"></span>
-                </div>
+                        <div class="form-group">
+                            <label><strong>Email</strong></label>
+                            <input type="text" class="form-control" asp-for="Email" />
+                            <span class="text-danger" asp-validation-for="Email"></span>
+                        </div>
 
-                <div class="form-group">
-                    <label><strong>LastName</strong></label>
-                    <input type="text" class="form-control" asp-for="LastName" />
-                    <span class="text-danger" asp-validation-for="LastName"></span>
-                </div>
+                        <div class="form-group">
+                            <label><strong>Password (eg. John@123)</strong></label>
+                            <input type="password" class="form-control" asp-for="Password" />
+                            <span class="text-danger" asp-validation-for="Password"></span>
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <label><strong>Email</strong></label>
-                    <input type="text" class="form-control" asp-for="Email" />
-                    <span class="text-danger" asp-validation-for="Email"></span>
-                </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label><strong>Last Name</strong></label>
+                            <input type="text" class="form-control" asp-for="LastName" />
+                            <span class="text-danger" asp-validation-for="LastName"></span>
+                        </div>
 
-                <div class="form-group">
-                    <label><strong>Contact</strong></label>
-                    <input type="text" class="form-control" asp-for="Contact" />
-                    <span class="text-danger" asp-validation-for="Contact"></span>
-                </div>
+                        <div class="form-group">
+                            <label><strong>Contact</strong></label>
+                            <input type="text" class="form-control" asp-for="Contact" />
+                            <span class="text-danger" asp-validation-for="Contact"></span>
+                        </div>
 
-                <div class="form-group">
-                    <label><strong>Password (eg. John@123)</strong></label>
-                    <input type="password" class="form-control" asp-for="Password" />
-                    <span class="text-danger" asp-validation-for="Password"></span>
-                </div>
-
-                <div class="form-group">
-                    <label><strong>Password confirm</strong></label>
-                    <input type="password" class="form-control" asp-for="ConfirmPassword" />
-                    <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
+                        <div class="form-group">
+                            <label><strong>Password confirm</strong></label>
+                            <input type="password" class="form-control" asp-for="ConfirmPassword" />
+                            <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="form-group" style="margin-top: 8px;">
-                    <button type="submit" style="background-color: #244b81; color: white" height:40px"; onclick="showMessage()">Register</button><br />
+                    <button type="submit" style="background-color: #244b81; color: white; height:40px;" onclick="showMessage()">Register</button><br />
                 </div>
-
             </form>
         </div>
     </div>
@@ -61,9 +64,21 @@
 
     <script>
         function showMessage() {
-            alert("Registration Successful!");
+            var firstName = document.getElementById("FirstName").value;
+            var lastName = document.getElementById("LastName").value;
+            var email = document.getElementById("Email").value;
+            var password = document.getElementById("Password").value;
+            var confirmPassword = document.getElementById("ConfirmPassword").value;
+
+            if (firstName === "" || lastName === "" || email === "" || password === "" || confirmPassword === "") {
+                alert("Please enter values in all the fields.");
+            } else {
+                alert("Registration Successful!");
+            }
         }
     </script>
+
+
 }
 
 <style>
@@ -76,7 +91,6 @@
         padding: 5px 20px;
         margin: 4px 0;
         display: inline-block;
-        /*border: 1px solid #ccc;*/
         box-sizing: border-box;
         border: 1px solid #f1f1f1;
         border-color: black;
