--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Shared/Disease.cshtml
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MedicineManagement.styles.css" asp-append-version="true" />
     <style>
+
+        #helloLink.active {
+            background-color: #5893d4; /* Set the desired background color */
+            color: white; /* Set text color to ensure readability */
+        }
+
         ul li:hover {
             background-color: cadetblue;
         }
@@ -21,6 +27,19 @@
             text-decoration: none;
             font-size: 20px;
             padding: 10px 20px;
+        }
+
+        /* Active navigation item style */
+
+        /*
+                .sidebar ul li a.active {
+                    background-color: darkcyan;
+                }*/
+
+
+        .sidebar ul li a.active {
+            background-color: #3a6ea5;
+            color: white; /* Set text color to ensure readability */
         }
     </style>
 
@@ -45,7 +64,7 @@
                                 <a class="nav-link text-light" asp-area="" asp-controller="Disease" asp-action="Home">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Hello @User.Identity.Name!</a>
+                                <a id="helloLink" class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Hello @User.Identity.Name!</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Logout" asp-action="Logout"> Logout</a>
@@ -71,18 +90,16 @@
     </header>
     <div style="display: flex; flex-direction: row; height: 100%;">
         <!-- Sidebar -->
-        <div style="width: 200px; background-color: cadetblue; color: white; height: 100%; position: fixed; display: flex; flex-direction: column; align-items: center;">
+        <div class="sidebar" style="width: 200px; background-color: cadetblue; color: white; height: 100%; position: fixed; display: flex; flex-direction: column; align-items: center;">
             <ul style="list-style-type: none; padding: 0;">
                 <li style="margin-bottom: 100px; margin-top: 90px; text-align: center;">
-                    <a href="/Disease/Create">Disease</a>
+                    <a href="/Disease/Create" class="disease-link">Disease</a>
                 </li>
                 <li style="margin-bottom: 70px; text-align: center;">
-                    <a href="/Medicine/Index">Medicine</a>
+                    <a href="/Medicine/Index" class="medicine-link">Medicine</a>
                 </li>
             </ul>
-
         </div>
-
 
         <!-- Main Content -->
         <div style="flex: 1; margin-left: 200px;">
@@ -102,5 +119,23 @@
     }
     @RenderSection("Scripts", required: false)
 
+    <!-- jQuery script for active navigation item -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            // Get the current URL path
+            var path = window.location.pathname;
+
+            // Find the corresponding navigation link and add the active class
+            $('.sidebar a').each(function () {
+                var href = $(this).attr('href');
+                if (path === href) {
+                    $(this).addClass('active');
+                }
+            });
+            //Add the active class to the specific menu item with id 'helloLink'
+            $('#helloLink').addClass('active');
+        });
+    </script>
 </body>
 </html>
