--- a/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Home/MedicineDisplay.cshtml
+++ b/Medicine_Retail_Poc/ASP.NET_Medicine_POC/MedicineManagement/MedicineManagement/Views/Home/MedicineDisplay.cshtml
@@ -87,7 +87,7 @@
                     </form>
                     <div class="form-group row">
                         <div class="col-md-6">
-                            <button type="button" class="btn btn-primary" style="background-color:#244b81" id="buyNowButton">Buy Now</button>
+                            <a href="@Url.Action("PaymentVerification", "Payment", new { id = Model.Id })" class="btn btn-primary">Buy Now</a>
                         </div>
                         <div class="col-md-6 text-right">
                             <button type="button" class="btn btn-primary" style="background-color:#244b81" id="saveToCartButton">Save to Cart</button>
